// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev-server/rendering renderPage(params) assumes the default body class of '' 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>{{title}} - Design System React</title>
    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sdc/design-system/61.0.4/css/main.css">
    <link rel="stylesheet" href="/main.css">
  </head>
  <body class="">
    {{body}}
  </body>
</html>
"
`;

exports[`dev-server/rendering renderPage(params) substitutes placeholder values 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>An example page - Design System React</title>
    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sdc/design-system/61.0.4/css/main.css">
    <link rel="stylesheet" href="/main.css">
  </head>
  <body class="an-example-body-class">
    
          <p>Example body content.</p>
        
  </body>
</html>
"
`;
